crates/jekko-tui/tests/snapshots/component_snapshots__command_palette_empty_120x30.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                            ╭──────────────────────────────────────────────────────────────╮                            "
"                            │  Commands                                                esc │                            "
"                            │Type to filter • ↑↓ navigate • ↵ run                          │                            "
"                            │──────────────────────────────────────────────────────────────│                            "
"                            │  >                                                           │                            "
"                            │  ──────────────────────────────────────────────────────────  │                            "
"                            │  ▸ New session  [Ctrl+X N]                                   │                            "
"                            │    Model picker  [Ctrl+X M]  Choose model                    │                            "
"                            │    Theme picker  [Ctrl+X T]                                  │                            "
"                            │    Export session  [Ctrl+X X]  Write transcript to disk      │                            "
"                            │    Plugin manager                                            │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            ╰──────────────────────────────────────────────────────────────╯                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
