crates/jekko-tui/tests/snapshots/component_snapshots__command_palette_filtered_120x30.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                            ╭──────────────────────────────────────────────────────────────╮                            "
"                            │  Commands                                                esc │                            "
"                            │Type to filter • ↑↓ navigate • ↵ run                          │                            "
"                            │──────────────────────────────────────────────────────────────│                            "
"                            │  > ses                                                       │                            "
"                            │  ──────────────────────────────────────────────────────────  │                            "
"                            │  ▸ New session                                               │                            "
"                            │    List sessions                                             │                            "
"                            │    Export session                                            │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            ╰──────────────────────────────────────────────────────────────╯                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
