crates/jekko-tui/tests/snapshots/component_snapshots__dialog_stack_top_command_100x30.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                  ╭──────────────────────────────────────────────────────────────╮                  "
"                  │  Commands                                                esc │                  "
"                  │Type to filter • ↑↓ navigate • ↵ run                          │                  "
"                  │──────────────────────────────────────────────────────────────│                  "
"                  │  >                                                           │                  "
"                  │  ──────────────────────────────────────────────────────────  │                  "
"                  │  ▸ Top palette                                               │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  ╰──────────────────────────────────────────────────────────────╯                  "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
