crates/jekko-tui/tests/snapshots/component_snapshots__footer_band_80x3.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"────────────────────────────────────────────────────────────────────────────────"
"[Ctrl+P] commands  [Ctrl+C] quit  [?] help                                      "
"                                                                                "
