crates/jekko-tui/tests/snapshots/component_snapshots__footer_band_session_hints_80x3.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"────────────────────────────────────────────────────────────────────────────────"
"[Ctrl+P] commands  [Ctrl+X] leader  [Esc] interrupt  [Ctrl+C] quit              "
"                                                                                "
