crates/jekko-tui/tests/snapshots/component_snapshots__footer_band_shell_hints_80x3.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"────────────────────────────────────────────────────────────────────────────────"
"[Ctrl+P] commands  [Ctrl+X] leader  [Ctrl+H] back  [Ctrl+C] quit                "
"                                                                                "
