crates/jekko-tui/tests/snapshots/component_snapshots__home_chrome_120x30.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                               ──────────────────────────────────────────────────────────                               "
"                               ▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄                               "
"                                     ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██                               "
"                               ▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██                               "
"                                 ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀                                 "
"                                                      Hello jekko.                                                      "
"                                                         v1.0.3                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"[Ctrl+P] commands  [Ctrl+C] quit                                                                                        "
