crates/jekko-tui/tests/snapshots/component_snapshots__logo_80x10.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"           ──────────────────────────────────────────────────────────           "
"           ▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄           "
"                 ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██           "
"           ▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██           "
"             ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
