crates/jekko-tui/tests/snapshots/component_snapshots__logo_ascii_fallback_40x6.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                        "
"         __  ___ _   _  _   __   __     "
"          \ \/ // | / \| | / / / /      "
"          _\ // /| |/ /\ |/ / / /       "
"           /_//_/ |_|_/  |_/  /_/       "
"                                        "
