crates/jekko-tui/tests/snapshots/component_snapshots__logo_light_mode_80x10.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
assertion_line: 66
expression: out
---
"                                                                                "
"                                                                                "
"░        .    ░             ░                    ░       ░   .   ░       ░      "
"            .   ◆                      ░  ░   .░  .    ░░      ░       ░        "
" ░     ░░░░░░░░░░░░░ ░░░░░░░░░░░░░ ░░░░    ░░░░ ░░░░ ░  .░░░ ░ ░░░░░░░░░        "
"      ░▓▓▓▓▓▓▓▓▓▓▓▓▓░▓▓▓▓▓▓▓▓▓▓▓▓▓░▓▓▓▓░  ░▓▓▓▓░▓▓▓▓░  ░░▓▓▓░░░▓▓▓▓▓▓▓▓▓░░      "
"  ░  ░▓▀▀▀▀▀▀▀▀▀▀▀▀▀▓█▀▀▀▀▀▀▀▀▀▀▀█▓▀▀▀█░░░▓█▀▀▀▓█▀▀█░ ░▓▓▀▀▀▓▓▓▀▀▀▀▀▀▀▀▀▓▓◆     "
"     ░▓████*██▀▀▀███▓█▀▀▀█████████▓▀▀▀█░▓▓▀▀▀██◆◆◆◆◆◆◆◆◆◆◆◆◆◆█▀▀▀█████▀▀▀█░     "
"                                                                                "
"                                                                                "
