crates/jekko-tui/tests/snapshots/component_snapshots__logo_pixel_with_subtitle_80x8.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"           ──────────────────────────────────────────────────────────           "
"           ▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄           "
"                 ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██           "
"           ▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██           "
"             ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀             "
"                       ZYAL  safe autonomous coding ready                       "
"                                                                                "
"                                                                                "
