crates/jekko-tui/tests/snapshots/component_snapshots__nav_header_home_active_80x1.snap
---
source: crates/jekko-tui/tests/component_snapshots.rs
expression: out
---
"                                                                                "
